# CUT

./: CMakeLists.txt  kill.sh  read.py  readme.md  valgrind_report.txt
include/: analyzer.h  reader.h  threads.h
src/: analyzer.c  main.c  reader.c  threads.c
test/: file_read_test.c  test_proc.txt  watchdog_test.c
